--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,4 +1,5 @@
-h1 {
-  color: hotpink; }
+table, tr, td {
+  border: solid black 1px;
+  border-collapse: collapse; }
 
 /*# sourceMappingURL=style.css.map */
