--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,31 @@
+@import url("https://fonts.googleapis.com/css?family=Inconsolata|Pacifico|Quicksand");
+form {
+  background: #EEEEEE;
+  padding: 15px; }
+  form > div {
+    padding-bottom: 10px;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: auto; }
+    form > div label {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2; }
+    form > div input {
+      grid-column: 2 / 3;
+      grid-row: 1 / 2;
+      width: 200px;
+      font-size: 18px; }
+
+* {
+  font-family: 'Quicksand', sans-serif; }
+
+h1 {
+  font-family: 'Pacifico', cursive;
+  border-bottom: solid 4px black; }
+
+h2, h3, h4, h5 {
+  font-family: 'Inconsolata', serif; }
+
 table, tr, td {
   border: solid black 1px;
   border-collapse: collapse; }
