--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -2,6 +2,7 @@
 @import 'components/form';
 @import 'components/table';
 @import 'components/results';
+@import 'components/sewing/sewing.scss';
 
 
 * {
